add more ergonomic keybindings for splitting panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,3 +63,9 @@ set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence off
 set -g word-separators "!\"#$%&'()*+,-./:;<=>?@[\\]^`{|}~"
+
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
