--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,3 +69,6 @@ bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
