--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,10 @@ set -g lock-after-time 0
 set -g lock-command "lock -np"
 set -g message-command-style bg=black,fg=yellow
 set -g message-style "bg=#44475a,fg=#f8f8f2"
+
+# Enable mouse mode 
 set -g mouse on
+
 set -g prefix C-b
 set -g prefix2 None
 set -g renumber-windows on
@@ -78,3 +81,6 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+# don't rename windows automatically
+set-option -g allow-rename off
