show cpu and ram usage in status line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,10 +3,12 @@ set -g @catppuccin_flavour mocha
 set -g @dracula-border-contrast true
 set -g @dracula-git-show-remote-status true
 set -g @dracula-military-time false
-set -g @dracula-plugins "git weather time"
+set -g @dracula-plugins "git cpu-usage ram-:sage time"
 set -g @dracula-show-empty-plugins false
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon smiley
+
 set -g @plugin tmux-plugins/tmux-yank
 
 set -g activity-action other
@@ -39,6 +41,8 @@ set -g repeat-time 500
 set -g set-titles off
 set -g set-titles-string "#S:#I:#W - \"#T\" #{session_alerts}"
 set -g silence-action other
+
+# Status line
 set -g status on
 set -g status-bg default
 set -g status-fg default
@@ -55,6 +59,7 @@ set -g status-right "#{?#{==:#(/Users/sebastianneumair/.config/tmux/plugins/tmux
 set -g status-right-length 250
 set -g status-right-style default
 set -g status-style "bg=#44475a,fg=#f8f8f2"
+
 set -g update-environment[0] DISPLAY
 set -g update-environment[1] KRB5CCNAME
 set -g update-environment[2] SSH_ASKPASS
@@ -85,3 +90,6 @@ bind -n M-Down select-pane -D
 
 # don't rename windows automatically
 set-option -g allow-rename off
+
+# Run TPM
+run '~/.tmux/plugins/tpm/tpm'
