add poodle icon

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,11 +3,11 @@ set -g @catppuccin_flavour mocha
 set -g @dracula-border-contrast true
 set -g @dracula-git-show-remote-status true
 set -g @dracula-military-time false
-set -g @dracula-plugins "git cpu-usage ram-:sage time"
+set -g @dracula-plugins "git cpu-usage ram-usage time"
 set -g @dracula-show-empty-plugins false
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-powerline true
-set -g @dracula-show-left-icon smiley
+set -g @dracula-show-left-icon 🐩
 
 set -g @plugin tmux-plugins/tmux-yank
 
@@ -51,7 +51,7 @@ set -g status-format[1] "#[align=centre]#{P:#{?pane_active,#[reverse],}#{pane_in
 set -g status-interval 5
 set -g status-justify left
 set -g status-keys emacs
-set -g status-left "#[bg=#50fa7b,fg=#282a36]#{?client_prefix,#[bg=#f1fa8c],} ☺  #[fg=#50fa7b,bg=#44475a]#{?client_prefix,#[fg=#f1fa8c],}"
+set -g status-left "#[bg=#50fa7b,fg=#282a36]#{?client_prefix,#[bg=#f1fa8c],} 🐩 #[fg=#50fa7b,bg=#44475a]#{?client_prefix,#[fg=#f1fa8c],}"
 set -g status-left-length 100
 set -g status-left-style default
 set -g status-position bottom
