explicitly style dracula status lone

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,8 @@ set -g @dracula-show-empty-plugins false
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon 🐩
+set -g @dracula-show-left-sep 
+set -g @dracula-show-right-sep 
 
 set -g @plugin tmux-plugins/tmux-yank
 
