add missing plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 # install TPM (https://github.com/tmux-plugins/tpm)
+set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour mocha
+
+set -g @plugin 'dracula/tmux'
 set -g @dracula-border-contrast true
 set -g @dracula-git-show-remote-status true
 set -g @dracula-military-time false
