add tmux reloaded display message

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,5 @@
 # install TPM (https://github.com/tmux-plugins/tpm)
-set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour mocha
-
-set -g @plugin 'dracula/tmux'
 set -g @dracula-border-contrast true
 set -g @dracula-git-show-remote-status true
 set -g @dracula-military-time false
@@ -85,7 +82,7 @@ unbind '"'
 unbind %
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf; display "TMUX config reloaded!"
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
