--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,8 @@
 # install TPM (https://github.com/tmux-plugins/tpm)
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'dracula/tmux'
+set -g @plugin tmux-plugins/tmux-yank
+
 set -g @catppuccin_flavour mocha
 set -g @dracula-border-contrast true
 set -g @dracula-git-show-remote-status true
@@ -10,8 +14,6 @@ set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon 🐩
 set -g @dracula-show-left-sep 
 set -g @dracula-show-right-sep 
-
-set -g @plugin tmux-plugins/tmux-yank
 
 set -g activity-action other
 set -g assume-paste-time 1
