add tmux reloaded display message (#2)
* add tmux reloaded display message

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,9 @@
 # install TPM (https://github.com/tmux-plugins/tpm)
 set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour mocha
-
 set -g @plugin 'dracula/tmux'
+set -g @plugin tmux-plugins/tmux-yank
+
+set -g @catppuccin_flavour mocha
 set -g @dracula-border-contrast true
 set -g @dracula-git-show-remote-status true
 set -g @dracula-military-time false
@@ -13,8 +14,6 @@ set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon 🐩
 set -g @dracula-show-left-sep 
 set -g @dracula-show-right-sep 
-
-set -g @plugin tmux-plugins/tmux-yank
 
 set -g activity-action other
 set -g assume-paste-time 1
@@ -85,7 +84,7 @@ unbind '"'
 unbind %
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf; display "TMUX config reloaded!"
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
