fix tmux config path for reload

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,7 +84,7 @@ unbind '"'
 unbind %
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf; display "TMUX config reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf; display "TMUX config reloaded!"
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
